<RelativeLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:legi="http://schemas.android.com/apk/res-auto"
		tools:context=".auth_activity"
		android:background="@drawable/auth_background"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:longClickable="true">

<LinearLayout

		android:orientation="vertical"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		android:baselineAligned="false"
		android:layout_marginTop="150dp"
		android:layout_alignParentLeft="true"
		android:layout_marginLeft="0dp"
		android:layout_alignParentTop="true"
		android:id="@+id/linearLayout">

	<LinearLayout
			android:orientation="vertical"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="@dimen/auth_activity_padding_left"
			android:paddingBottom="25dp">

		<sk.rdy.legi.widget.TypeFacedTextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/login_to_your"
				legi:typeface="@string/oswald_light"
				style="@style/auth_activity_small_text"/>

		<sk.rdy.legi.widget.TypeFacedTextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/the_old_reader"
				android:id="@+id/auth_activity_text_appname"
				legi:typeface="@string/oswald_regular"
				style="@style/auth_activity_big_text"/>

		<sk.rdy.legi.widget.TypeFacedTextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/account"
				legi:typeface="@string/oswald_light"
				style="@style/auth_activity_small_text"/>

	</LinearLayout>

	<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

		<sk.rdy.legi.widget.TypeFacedEditText
				android:layout_width="wrap_content"
				android:layout_height="fill_parent"
				android:ems="15"
				android:id="@+id/auth_email"
				android:inputType="textEmailAddress"
				android:hint="@string/email"
				android:focusableInTouchMode="true"
				style="@style/editable_text.login"
				android:clickable="true"
				android:focusable="true"
				android:enabled="true"
				android:textColor="@android:color/white"
				android:background="@drawable/auth_edit_text"
				legi:edittext_typeface="@string/oswald_light"
				android:width="350dp"/>

		<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/auth_edit_text"
				android:src="@drawable/ic_person"
				android:layout_marginLeft="@dimen/auth_activity_icon_left_margin"
				android:padding="5dp"/>

	</LinearLayout>

	<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_marginTop="@dimen/auth_activity_icon_left_margin">

		<sk.rdy.legi.widget.TypeFacedEditText
				android:layout_width="wrap_content"
				android:layout_height="fill_parent"
				android:ems="15"
				android:id="@+id/auth_password"
				android:inputType="textPassword"
				android:hint="@string/password"
				style="@style/editable_text.login"
				android:clickable="true"
				android:focusable="true"
				android:focusableInTouchMode="true"
				android:background="@drawable/auth_edit_text"
				legi:edittext_typeface="@string/oswald_light"
				android:width="350dp"/>

		<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/auth_edit_text"
				android:src="@drawable/ic_password"
				android:layout_marginLeft="@dimen/auth_activity_icon_left_margin"
				android:padding="5dp"/>

	</LinearLayout>

	<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:orientation="vertical">

	</LinearLayout>

	<sk.rdy.legi.widget.TypeFacedButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/sign_in"
			android:id="@+id/btn_login"
			android:layout_marginTop="14dp"
			android:clickable="true"
			android:onClick="onSignInClick"
			style="@style/button.login"
			android:focusable="true"
			android:enabled="true"
			android:layout_gravity="right"
			legi:button_typeface="@string/oswald_light"
			android:layout_marginRight="190dp"
			android:visibility="gone"/>


</LinearLayout>

	<ImageButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/imageButton"
			android:src="@drawable/button_circle"
			android:background="@android:color/transparent"
			android:layout_alignBottom="@+id/linearLayout"
			android:layout_alignParentRight="true"
			android:layout_marginRight="35dp"
			android:onClick="onSignInClick"
			android:layout_marginBottom="0dp"/>

</RelativeLayout>
