<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:legi="http://schemas.android.com/apk/res-auto"
		android:gravity="fill"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

	<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/feed_item_image"
			android:layout_gravity="center_horizontal|top"
			android:layout_alignParentTop="true"
			android:layout_alignParentLeft="true"/>


		<sk.rdy.legi.widget.TypeFacedTextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="New Text"
				legi:typeface="@string/oswald_regular"
				android:id="@+id/feed_item_title"
				android:layout_alignParentTop="true"
				android:layout_toRightOf="@+id/feed_item_image"
				android:textSize="22dp"/>


	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/feed_item_title"
			android:id="@+id/linearLayout">

		<sk.rdy.legi.widget.TypeFacedTextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				legi:typeface="@string/oswald_light"
				android:text="BY "
				android:textSize="18dp"
				android:capitalize="characters"/>

		<sk.rdy.legi.widget.TypeFacedTextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				legi:typeface="@string/oswald_light"
				android:text="New Text"
				android:id="@+id/feed_item_author"
				android:capitalize="characters"
				android:layout_below="@+id/feed_item_title"
				android:layout_alignParentLeft="true"
				android:textSize="18dp"/>

		<sk.rdy.legi.widget.TypeFacedTextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				legi:typeface="@string/oswald_light"
				android:text=" :: "
				android:layout_below="@+id/feed_item_title"
				android:layout_toRightOf="@+id/feed_item_title"
				android:textSize="18dp"
				android:capitalize="characters"/>

		<sk.rdy.legi.widget.TypeFacedTextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				legi:typeface="@string/oswald_light"
				android:id="@+id/feed_item_url"
				android:text="url"
				android:capitalize="characters"
				android:layout_alignTop="@+id/view"
				android:layout_toRightOf="@+id/view"
				android:textSize="18dp"/>
	</LinearLayout>

	<sk.rdy.legi.widget.TypeFacedTextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			legi:typeface="@string/roboto_regular"
			android:textSize="16dp"
			android:text="New Text"
			android:id="@+id/feed_item_content"
			android:layout_below="@+id/linearLayout"
			android:layout_alignParentLeft="true"/>

	<sk.rdy.legi.widget.TypeFacedTextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			legi:typeface="@string/oswald_light"
			android:text="New Text"
			android:id="@+id/feed_item_date"
			android:layout_below="@+id/feed_item_content"
			android:layout_alignParentLeft="true"
			android:textSize="18dp"/>

</RelativeLayout>